# say-right

./: .gitignore  AGENTS.md  README.md  README_CN.md
backend/: .env.example  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  api.py  passwords.py  repository.py  schemas.py  service.py  tokens.py
backend/app/card/: __init__.py  api.py  repository.py  service.py
backend/app/dashboard/: __init__.py  api.py  repository.py  service.py
backend/app/db/: __init__.py  helpers.py  pool.py  runtime.py  schema_sync.py
backend/app/deck/: __init__.py  api.py  repository.py  service.py
backend/app/domain/: __init__.py  models.py  schemas.py
backend/app/llm/: __init__.py  client.py  runtime.py  text.py
backend/app/record/: __init__.py  api.py  errors.py  group_agent_stub.py  save_agent_service.py  service.py  stub.py
backend/app/review/: __init__.py  ai_scorer.py  ai_scorer_stub.py  api.py  errors.py  fsrs_scheduler.py  repository.py  service.py  session_service.py
backend/db/: schema.sql
backend/scripts/: bench_tab_latency.py  sync_schema.py
backend/tests/: conftest.py
backend/tests/e2e/: test_main_flow.py
backend/tests/integration/: test_auth_api.py  test_card_api.py  test_contract_regression.py  test_dashboard_api.py  test_deck_api.py  test_deck_delete_rules.py  test_health.py  test_record_generate_api.py  test_record_save.py  test_review_decks_api.py  test_review_session_api.py  test_save_with_agent_fallback.py  test_save_with_agent_hit.py
backend/tests/unit/: test_auth_repository.py  (+13 more)
(+192 files in other folders)
