[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "say-right-backend"
version = "0.1.0"
description = "say-right backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.134.0,<1.0",
  "uvicorn>=0.41.0,<1.0",
  "pwdlib[argon2]>=0.3.0,<1.0",
  "PyJWT>=2.10.0,<3.0",
  "psycopg[binary]>=3.2.0,<4.0",
  "langchain-openai>=0.3.0,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0,<10.0",
  "httpx>=0.28.0,<1.0",
  "ruff>=0.13.0,<1.0",
  "mypy>=1.18.0,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = ["app*"]
